--- a/src/components/menu-item/menuitem.scss
+++ b/src/components/menu-item/menuitem.scss
@@ -1,17 +1,3 @@
-.homepage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 80px;
-}
-
-.directory-menu {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
 .menu-item {
   min-width: 30%;
   height: 240px;
@@ -21,7 +7,20 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
+  overflow: hidden;
 
+  &:hover {
+    cursor: pointer;
+
+    & .background-image {
+      transform: scale(1.1);
+      transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+    }
+  }
+
+  &.large {
+    height: 380px;
+  }
   &:first-child {
     margin-right: 7.5px;
   }
@@ -38,17 +37,28 @@
     align-items: center;
     justify-content: center;
     border: 1px solid black;
+    background-color: rgb(0, 0, 0);
+    opacity: 0.9;
+    color: #fff;
+    position: absolute;
 
     .title {
       font-weight: bold;
       margin-bottom: 6px;
       font-size: 22px;
-      color: #4a4a4a;
+      // color: #4a4a4a;
     }
 
     .subtitle {
       font-weight: lighter;
       font-size: 16px;
     }
+  }
+  .background-image {
+    opacity: 0.7;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
   }
 }
