--- a/src/components/menu-item/menuitem.scss
+++ b/src/components/menu-item/menuitem.scss
@@ -16,6 +16,11 @@
       transform: scale(1.1);
       transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
     }
+    & .content {
+      box-shadow: 0px 0px 6px 3px blueviolet;
+      // box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+      transition: box-shadow 0.5s ease-in-out;
+    }
   }
 
   &.large {
